--- a/src/VBox/Devices/Storage/testcase/Makefile.kmk
+++ b/src/VBox/Devices/Storage/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31193 2010-07-29 08:06:22Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 31488 2010-08-09 15:56:27Z klaus.espenlaub@oracle.com $
 ## @file
 # Sub-Makefile for the storage device & driver testcases.
 #
@@ -48,30 +48,34 @@ endif
 # Basic testcases for the VD code.
 #
 ifdef VBOX_WITH_TESTCASES
- PROGRAMS += tstVD tstVD-2 tstVDCopy tstVDSnap tstVDShareable
+ PROGRAMS += tstVD tstVD-2 tstVDCopy tstVDSnap tstVDShareable tstVDSetUuid
  ifeq ($(KBUILD_TARGET),l4)
   tstVD_TEMPLATE = VBOXLNXHOSTR3EXE
   tstVD-2_TEMPLATE = VBOXLNXHOSTR3EXE
   tstVDCopy_TEMPLATE = VBOXLNXHOSTR3EXE
   tstVDSnap_TEMPLATE = VBOXLNXHOSTR3EXE
   tstVDShareable_TEMPLATE = VBOXLNXHOSTR3EXE
+  tstVDSetUuid_TEMPLATE = VBOXLNXHOSTR3EXE
  else
   tstVD_TEMPLATE = VBOXR3TSTEXE
   tstVD-2_TEMPLATE = VBOXR3TSTEXE
   tstVDCopy_TEMPLATE = VBOXR3TSTEXE
   tstVDSnap_TEMPLATE = VBOXR3TSTEXE
   tstVDShareable_TEMPLATE = VBOXR3TSTEXE
+  tstVDSetUuid_TEMPLATE = VBOXR3TSTEXE
  endif
  tstVD_LIBS     = $(LIB_DDU) $(LIB_RUNTIME)
  tstVD-2_LIBS   = $(LIB_DDU) $(LIB_RUNTIME)
  tstVDCopy_LIBS   = $(LIB_DDU) $(LIB_RUNTIME)
  tstVDSnap_LIBS   = $(LIB_DDU) $(LIB_RUNTIME)
  tstVDShareable_LIBS   = $(LIB_DDU) $(LIB_RUNTIME)
+ tstVDSetUuid_LIBS   = $(LIB_DDU) $(LIB_RUNTIME)
  tstVD_SOURCES  = tstVD.cpp
  tstVD-2_SOURCES  = tstVD-2.cpp
  tstVDCopy_SOURCES  = tstVDCopy.cpp
  tstVDSnap_SOURCES  = tstVDSnap.cpp
  tstVDShareable_SOURCES = tstVDShareable.cpp
+ tstVDSetUuid_SOURCES = tstVDSetUuid.cpp
 endif
 
 include	$(KBUILD_PATH)/subfooter.kmk
