--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31515 2010-08-10 11:09:38Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31538 2010-08-10 15:28:34Z noreply@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -1178,9 +1178,9 @@ if defined(VBOX_WITH_USB) && defined(VBOX_WITH_TESTCASES) && !defined(VBOX_ONLY_
  VBOX_PRX_DEV_LNX = $(PATH_ROOT)/src/VBox/Devices/USB/linux/USBProxyDevice-linux.cpp
  VRDP_PRX_DEV_LNX = $(PATH_ROOT)/src/VBox/RDP/client/vrdp/USBProxyDevice-linux.c
 $$(PATH_Drivers)/tstSameUSBProxyDevLinux.run: $(VBOX_PRX_DEV_LNX) $(VRDP_PRX_DEV_LNX) | $$(PATH_Drivers)/
-	$(QUIET)$(CMP) $(VBOX_PRX_DEV_LNX) $(VRDP_PRX_DEV_LNX) \
-		$(length $(shell $(SED) -n '1 p' $(VBOX_PRX_DEV_LNX))) \
-		$(length $(shell $(SED) -n '1 p' $(VRDP_PRX_DEV_LNX)))
+	$(QUIET)$(call MSG_L1,Source correctness - ensuring that files are identical: $^)
+	$(QUIET)$(CMP) $^ \
+		$(foreach i,$^,$(length $(shell $(SED) -n '1,\?/* START */?p' $(i))))
 	$(QUIET)$(APPEND) -t "$@" "done"
 endif # USB + TESTCASES + !SDK
 
