--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31538 2010-08-10 15:28:34Z noreply@oracle.com $
+# $Id: Makefile.kmk 31550 2010-08-10 18:53:01Z noreply@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -1180,7 +1180,7 @@ if defined(VBOX_WITH_USB) && defined(VBOX_WITH_TESTCASES) && !defined(VBOX_ONLY_
 $$(PATH_Drivers)/tstSameUSBProxyDevLinux.run: $(VBOX_PRX_DEV_LNX) $(VRDP_PRX_DEV_LNX) | $$(PATH_Drivers)/
 	$(QUIET)$(call MSG_L1,Source correctness - ensuring that files are identical: $^)
 	$(QUIET)$(CMP) $^ \
-		$(foreach i,$^,$(length $(shell $(SED) -n '1,\?/* START */?p' $(i))))
+		$(foreach i,$^,$(length $(shell $(SED) -n '1,\?/\* START \*/?p' $(i))))
 	$(QUIET)$(APPEND) -t "$@" "done"
 endif # USB + TESTCASES + !SDK
 
