--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31550 2010-08-10 18:53:01Z noreply@oracle.com $
+# $Id: Makefile.kmk 31551 2010-08-10 20:30:37Z noreply@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -1172,6 +1172,7 @@ ServicesR0_SOURCES   = \
 # If you are updating the code, build with VBOX_WITH_TESTCASES= as long as you
 # haven't synced.
 #
+ifeq (0,1)
 if defined(VBOX_WITH_USB) && defined(VBOX_WITH_TESTCASES) && !defined(VBOX_ONLY_SDK)
  TESTING += $(PATH_Drivers)/tstSameUSBProxyDevLinux.run
  OTHERS  += $(PATH_Drivers)/tstSameUSBProxyDevLinux.run
@@ -1183,6 +1184,7 @@ $$(PATH_Drivers)/tstSameUSBProxyDevLinux.run: $(VBOX_PRX_DEV_LNX) $(VRDP_PRX_DEV
 		$(foreach i,$^,$(length $(shell $(SED) -n '1,\?/\* START \*/?p' $(i))))
 	$(QUIET)$(APPEND) -t "$@" "done"
 endif # USB + TESTCASES + !SDK
+endif
 
 
 #
