--- a/src/VBox/Additions/common/VBoxGuest/win/VBoxGuest.rc
+++ b/src/VBox/Additions/common/VBoxGuest/win/VBoxGuest.rc
@@ -1,4 +1,4 @@
-/* $Id: VBoxGuest.rc 32394 2010-09-10 12:13:11Z noreply@oracle.com $ */
+/* $Id: VBoxGuest.rc 32397 2010-09-10 12:31:00Z noreply@oracle.com $ */
 /** @file
  * VBoxGuest - Resource file containing version info and icon.
  */
@@ -8,6 +8,11 @@
  *
  * This file is part of VirtualBox Open Source Edition (OSE), as
  * available from http://www.virtualbox.org. This file is free software;
+ * you can redistribute it and/or modify it under the terms of the GNU
+ * General Public License (GPL) as published by the Free Software
+ * Foundation, in version 2 as it comes in the "COPYING" file of the
+ * VirtualBox OSE distribution. VirtualBox OSE is distributed in the
+ * hope that it will be useful, but WITHOUT ANY WARRANTY of any kind.
 G* you can redistribute it and/or modify it under the terms of the GNU
  * General Public License (GPL) as published by the Free Software
  * Foundation, in version 2 as it comes in the "COPYING" file of the
