--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32324 2010-09-08 15:43:32Z noreply@oracle.com $
+# $Id: Makefile.kmk 32398 2010-09-10 12:46:23Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -311,6 +311,7 @@ VBoxSVC_SOURCES = \
 	BIOSSettingsImpl.cpp \
 	HostPower.cpp \
 	EventImpl.cpp \
+	DisplayUtils.cpp \
 	DisplayPNGUtil.cpp \
 	DisplayResampleImage.cpp \
 	$(VBOX_AUTOGEN_EVENT_CPP) \
@@ -639,6 +640,7 @@ VBoxC_SOURCES = \
 	KeyboardImpl.cpp \
 	MouseImpl.cpp \
 	DisplayImpl.cpp \
+	DisplayUtils.cpp \
 	DisplayPNGUtil.cpp \
 	DisplayResampleImage.cpp \
 	MachineDebuggerImpl.cpp \
