--- a/src/VBox/Additions/common/testcase/Makefile.kmk
+++ b/src/VBox/Additions/common/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 61727 2010-05-17 19:41:27Z fmehnert $
+# $Id: Makefile.kmk 32404 2010-09-10 13:17:42Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the Cross Platform Guest Addition test cases.
 #
