--- a/src/VBox/Devices/EFI/Firmware2/VBoxPkg/VBoxMisc/Makefile
+++ b/src/VBox/Devices/EFI/Firmware2/VBoxPkg/VBoxMisc/Makefile
@@ -1,4 +1,4 @@
-# $Id$
+# $Id: Makefile 32404 2010-09-10 13:17:42Z noreply@oracle.com $
 #* @file
 # Makefile - assembling the iso image for experimenting with EFI.
 #/
