--- a/src/VBox/Additions/WINNT/Graphics/Miniport/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Miniport/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32241 2010-09-06 04:52:56Z noreply@oracle.com $
+# $Id: Makefile.kmk 32496 2010-09-14 22:14:46Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxVideo.
 #
@@ -102,6 +102,7 @@ ifdef VBOXWDDM
 	wddm/VBoxVideoVdma.cpp \
 	wddm/VBoxVideoShgsmi.cpp \
  	wddm/VBoxVideoCm.cpp \
+ 	wddm/VBoxVideoMisc.cpp \
  	wddm/VBoxVideoWddm.rc
  ifdef VBOXWDDM_WITH_VBVA
   VBoxVideoWddm_SOURCES   += \
