--- a/src/VBox/Additions/x11/vboxmouse/Makefile.kmk
+++ b/src/VBox/Additions/x11/vboxmouse/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32164 2010-08-31 21:41:48Z noreply@oracle.com $
+# $Id: Makefile.kmk 32522 2010-09-15 14:23:15Z ramshankar.venkataraman@oracle.com $
 ## @file
 # Sub-Makefile for the VBox Additions XFree86 and X.org mouse drivers.
 #
@@ -119,7 +119,7 @@ vboxmouse_drv_14_INCS := \
 	$(VBOX_PATH_X11_XORG_1_4) \
 	$(VBOX_PATH_X11_XORG_1_4)/xorg \
 	$(PATH_SUB_CURRENT)
-ifeq ($(KBUILD_TARGET),linux)
+ifeq ($(KBUILD_TARGET),linux solaris)
 vboxmouse_drv_14_SOURCES = \
 	vboxmouse_15.c
 else  # Don't enable this for other platforms yet
