--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32509 2010-09-15 11:15:58Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 32529 2010-09-15 15:40:50Z ramshankar.venkataraman@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -759,11 +759,12 @@ RuntimeR3_SOURCES.solaris = \
 	r3/posix/utf8-posix.cpp \
 	r3/solaris/alloc-solaris.cpp \
 	r3/solaris/mp-solaris.cpp \
-	r3/solaris/coredumper-solaris.cpp \
 	r3/solaris/rtProcInitExePath-solaris.cpp
 RuntimeR3_SOURCES.solaris.amd64 = \
+	r3/solaris/coredumper-solaris.cpp \
 	r3/solaris/RTSystemQueryDmiString-solaris.cpp
 RuntimeR3_SOURCES.solaris.x86 = \
+	r3/solaris/coredumper-solaris.cpp \
 	r3/solaris/RTSystemQueryDmiString-solaris.cpp
 RuntimeR3_SOURCES.solaris.sparc32 = \
 	generic/RTSystemQueryDmiString-generic.cpp
