--- a/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32322 2010-09-08 15:00:46Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 32590 2010-09-17 11:24:09Z noreply@oracle.com $
 ## @file
 # Makefile for the Cross Platform Guest Additions Driver.
 #
@@ -169,6 +169,7 @@ ifeq ($(KBUILD_TARGET),linux)
 	$(call MSG_TOOL,Creating,,$@)
 	$(QUIET)$(SED) \
 		-e "s;_VERSION_;${VBOX_VERSION_STRING};g" \
+		-e "s;_BUILDTYPE_;$(KBUILD_TYPE);g" \
 		--output $@ $<
 
  $$(vboxguest-sh_0_OUTDIR)/do_dkms: \
