--- a/src/VBox/GuestHost/OpenGL/Makefile.kmk
+++ b/src/VBox/GuestHost/OpenGL/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32513 2010-09-15 12:15:26Z noreply@oracle.com $
+# $Id: Makefile.kmk 32594 2010-09-17 12:34:19Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VirtualBox Guest/Host OpenGL part
 #
@@ -40,6 +40,9 @@ endif
 # VBoxOGLcrutil
 #
 VBoxOGLcrutil_TEMPLATE      = VBOXCROGLR3GUESTDLL
+if defined(VBOX_SIGNING_MODE) && defined(VBOXWDDM)
+ VBoxOGLcrutil_NOINST.win.x86 = true
+endif
 VBoxOGLcrutil_SDKS.win      = DXSDK
 VBoxOGLcrutil_INTERMEDIATES = $(VBOX_PATH_CROGL_GENFILES)/cr_opcodes.h
 if1of ($(KBUILD_TARGET), linux solaris freebsd)
@@ -474,6 +477,9 @@ $(VBOX_PATH_CROGL_GENFILES)/state/cr_statefuncs.h: $(addprefix $(PATH_SUB_CURREN
 #         and glu.h intermediate files on darwin.
 #
 VBoxOGLerrorspu_TEMPLATE = VBOXCROGLR3GUESTDLL
+if defined(VBOX_SIGNING_MODE) && defined(VBOXWDDM)
+ VBoxOGLerrorspu_NOINST.win.x86 = true
+endif
 VBoxOGLerrorspu_INTERMEDIATES = \
 	$(VBOX_PATH_CROGL_GENFILES)/spu_dispatch_table.h
 if1of ($(KBUILD_TARGET), linux solaris freebsd)
