--- a/src/VBox/GuestHost/OpenGL/Makefile.kmk
+++ b/src/VBox/GuestHost/OpenGL/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32606 2010-09-17 13:47:21Z noreply@oracle.com $
+# $Id: Makefile.kmk 32609 2010-09-17 14:26:41Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VirtualBox Guest/Host OpenGL part
 #
@@ -101,7 +101,7 @@ VBoxOGLhostcrutil_EXTENDS  = VBoxOGLcrutil
 VBoxOGLhostcrutil_TEMPLATE = VBOXCROGLR3HOSTDLL
 if defined(VBOX_SIGNING_MODE) && defined(VBOXWDDM)
  # need to reset the NOINST flag
- VBoxOGLhostcrutil_NOINST.win.x86 =
+ VBoxOGLhostcrutil_NOINST.win.x86 = false
 endif
 VBoxOGLhostcrutil_LDFLAGS.darwin = $(VBoxOGLcrutil_LDFLAGS.darwin) \
 	-install_name $(VBOX_DYLD_EXECUTABLE_PATH)/VBoxOGLhostcrutil.dylib
@@ -508,7 +508,7 @@ VBoxOGLhosterrorspu_EXTENDS  = VBoxOGLerrorspu
 VBoxOGLhosterrorspu_TEMPLATE = VBOXCROGLR3HOSTDLL
 if defined(VBOX_SIGNING_MODE) && defined(VBOXWDDM)
  # need to reset the NOINST flag
- VBoxOGLhosterrorspu_NOINST.win.x86 =
+ VBoxOGLhosterrorspu_NOINST.win.x86 = false
 endif
 VBoxOGLhosterrorspu_LDFLAGS.darwin += $(VBoxOGLerrorspu_LDFLAGS.darwin) \
 	-install_name $(VBOX_DYLD_EXECUTABLE_PATH)/VBoxOGLhosterrorspu.dylib
