--- a/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32431 2010-09-11 18:02:17Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 32622 2010-09-17 20:18:39Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxDisp.dll.
 #
@@ -64,7 +64,7 @@ VBoxDisp_LIBS         += \
 VBoxDisp_DEFS += VBOX_WITH_HGSMI
 endif
 
-ifdef VBOXWDDM
+ifdef VBOX_WITH_WDDM
 
  ifeq ($(KBUILD_TARGET_ARCH), amd64)
   $(warning VBoxVideoD3D: make it 32bit for 64bit builds)
@@ -75,7 +75,7 @@ DLLS += VBoxDispD3D
 VBoxDispD3D_NOINST = true
  endif
 VBoxDispD3D_TEMPLATE = VBOXGUESTR3DLL
-VBoxDispD3D_DEFS     = UNICODE _UNICODE VBOXWDDM VBOXVDMA VBOXWDDMDISP
+VBoxDispD3D_DEFS     = UNICODE _UNICODE VBOX_WITH_WDDM VBOXVDMA VBOXWDDMDISP
 # VBoxDispD3D_DEFS    += VBOXDISPMP_TEST
 ifdef VBOXWDDM_WITH_VBVA
 VBoxDispD3D_DEFS    += VBOXWDDM_WITH_VBVA
