--- a/src/VBox/Additions/WINNT/Graphics/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32241 2010-09-06 04:52:56Z noreply@oracle.com $
+# $Id: Makefile.kmk 32622 2010-09-17 20:18:39Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the Windows guest graphics driver.
 #
@@ -64,7 +64,7 @@ $(PATH_TARGET)/VBoxVideoCat.dir/VBoxVideo.cat: \
 	$(call MSG_TOOL,Inf2Cat,VBoxVideo-inf,$@,$<)
 	$(call VBOX_MAKE_CAT_FN, $(@D),$@)
 
-ifdef VBOXWDDM
+ifdef VBOX_WITH_WDDM
 VBOXWDDM_WITH_DISPD3D = 1
 ifeq ($(KBUILD_TARGET_ARCH), x86)
 VBOXWDDM_WITH_GL = 1
