--- a/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31145 2010-07-27 15:53:05Z noreply@oracle.com $
+# $Id: Makefile.kmk 32622 2010-09-17 20:18:39Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxTray.
 #
@@ -54,8 +54,8 @@ VBoxTray_LIBS     = \
 	$(VBOX_LIB_IPRT_GUEST_R3) \
 	$(VBOX_LIB_VBGL_R3)
 
-ifdef VBOXWDDM
- VBoxTray_DEFS   += VBOXWDDM
+ifdef VBOX_WITH_WDDM
+ VBoxTray_DEFS   += VBOX_WITH_WDDM
  # VBoxTray_DEFS   += LOG_ENABLED
  # we need only includes for PFND3DKMT stuff as all we link dynamicaly to it
  VBoxTray_INCS   += $(PATH_SDK_WINDDK_INC_API) $(PATH_SDK_WINDDK_INC_DDK)
