--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32483 2010-09-14 13:45:07Z noreply@oracle.com $
+# $Id: Makefile.kmk 32622 2010-09-17 20:18:39Z noreply@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -144,8 +144,8 @@ endif
 ifdef VBOX_WITH_VIRTIO
  VirtualBox_DEFS        += VBOX_WITH_VIRTIO
 endif
-ifdef VBOXWDDM
- VirtualBox_DEFS        += VBOXWDDM
+ifdef VBOX_WITH_WDDM
+ VirtualBox_DEFS        += VBOX_WITH_WDDM
 endif
 ifdef VBOX_BLEEDING_EDGE
 VirtualBox_src/selector/VBoxSelectorWnd.cpp_DEFS += \
