--- a/src/VBox/Additions/WINNT/Graphics/Miniport/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Miniport/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32677 2010-09-21 17:12:27Z noreply@oracle.com $
+# $Id: Makefile.kmk 32681 2010-09-21 21:40:06Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxVideo.
 #
@@ -114,7 +114,7 @@ ifdef VBOX_WITH_WDDM
     wddm/VBoxVideoVhwa.cpp
  endif
  VBoxVideoWddm_LIBS.x86   = \
- 	$(PATH_SDK_WINDDKWLH_LIB)/bufferoverflowk.lib
+ 	$(PATH_SDK_WINDDKWLH_LIB)/BufferOverflowK.lib
  #VBoxVideoWddm_LIBS.x86   += \
  #	$(PATH_SDK_WINDDKWLH_LIB)/exsup.lib
  VBoxVideoWddm_LIBS        = \
