--- a/src/VBox/Additions/common/Makefile.kmk
+++ b/src/VBox/Additions/common/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 28800 2010-04-27 08:22:32Z noreply@oracle.com $
+# $Id: Makefile.kmk 32690 2010-09-22 10:09:36Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the common addition code.
 #
@@ -22,10 +22,10 @@ include	$(KBUILD_PATH)/subheader.kmk
 include $(PATH_SUB_CURRENT)/VBoxGuestLib/Makefile.kmk
 ifndef VBOX_ONLY_TESTSUITE
  include $(PATH_SUB_CURRENT)/VBoxControl/Makefile.kmk
- if1of ($(KBUILD_TARGET), freebsd linux os2 solaris)
+ if1of ($(KBUILD_TARGET), freebsd linux os2 solaris win)
   include $(PATH_SUB_CURRENT)/VBoxGuest/Makefile.kmk
  endif
- if1of ($(KBUILD_TARGET), linux win freebsd os2 solaris)
+ if1of ($(KBUILD_TARGET), freebsd linux os2 solaris win)
   include $(PATH_SUB_CURRENT)/VBoxService/Makefile.kmk
  endif
  ifdef VBOX_WITH_CROGL
