--- a/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32590 2010-09-17 11:24:09Z noreply@oracle.com $
+# $Id: Makefile.kmk 32693 2010-09-22 10:36:52Z noreply@oracle.com $
 ## @file
 # Makefile for the Cross Platform Guest Additions Driver.
 #
@@ -122,7 +122,7 @@ if1of ($(KBUILD_TARGET), freebsd $(if $(defined VBOX_WITH_ADDITION_DRIVERS),linu
   #
   SYSMODS.x86 += VBoxGuestNT
   VBoxGuestNT_EXTENDS = VBoxGuest
-  VBoxGuestNT_NOINST  = $(NO_SUCH_VARIABLE)
+  VBoxGuestNT_NOINST.win = $(NO_SUCH_VARIABLE)
   VBoxGuestNT_DEFS    = $(VBoxGuest_DEFS) TARGET_NT4
   VBoxGuestNT_SOURCES = \
   	VBoxGuest.cpp \
