--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32727 2010-09-23 14:31:31Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 32728 2010-09-23 14:40:29Z klaus.espenlaub@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -72,8 +72,6 @@ VBOX_IDL_FILE.XPCOM    = $(VBOX_PATH_SDK)/bindings/xpcom/idl/VirtualBox_XPCOM.id
 
 VBOX_IDL_TYPELIB.XPCOM = $(PATH_BIN)/components/VirtualBox_XPCOM.xpt
 VBOX_IDL_HEADER.XPCOM  = $(VBOX_PATH_SDK)/bindings/xpcom/include/VirtualBox_XPCOM.h
-
-OTHERS = $(PATH_TARGET)/VirtualBoxAPIClasses.tmp
 
 # The MS COM specific stuff.
 if defined(VBOX_ONLY_SDK) || "$(KBUILD_TARGET)" == "win"
@@ -155,16 +153,6 @@ docs.main docs.Main: $(PATH_TARGET)/docs.Main
 if !defined(VBOX_ONLY_DOCS)
 docs:                $(PATH_TARGET)/docs.Main
 endif
-
-
-#
-# Generate class definitions from the XIDL file.
-#
-$(PATH_TARGET)/VirtualBoxAPIClasses.tmp: \
-		$(VBOX_XIDL_FILE) \
-		$(VBOX_PATH_MAIN_SRC)/api-classgen.xsl \
-		| $$(dir $$@)
-	$(VBOX_XSLTPROC) -o $(PATH_TARGET)/VirtualBoxAPIClasses.tmp $(VBOX_PATH_MAIN_SRC)/api-classgen.xsl $<
 
 
 #
@@ -476,7 +464,7 @@ $(VBOX_XML_SCHEMADEFS_CPP): $(VBOX_XML_SCHEMADEFS_XSL) $(VBOX_XML_SCHEMA.$(KBUIL
 	$(call MSG_GENERATE,SchemaDefs,$@,$<)
 	$(QUIET)$(VBOX_XSLTPROC)  --stringparam mode define  -o $@ $(VBOX_XML_SCHEMADEFS_XSL) $(VBOX_XML_SCHEMA.$(KBUILD_TARGET))
 
-OTHER_CLEAN += $(VBOX_XML_SCHEMADEFS_H) $(VBOX_XML_SCHEMADEFS_CPP) $(PATH_TARGET)/VirtualBoxAPIClasses.tmp
+OTHER_CLEAN += $(VBOX_XML_SCHEMADEFS_H) $(VBOX_XML_SCHEMADEFS_CPP)
 
 
 if (   defined(VBOX_WITH_QTGUI) \
