--- a/src/VBox/HostDrivers/VBoxNetFlt/Makefile.kmk
+++ b/src/VBox/HostDrivers/VBoxNetFlt/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32183 2010-09-01 15:53:42Z noreply@oracle.com $
+# $Id: Makefile.kmk 32773 2010-09-27 12:43:41Z ramshankar.venkataraman@oracle.com $
 ## @file
 # Sub-Makefile for the Network Filter Driver (VBoxNetFlt).
 #
@@ -323,10 +323,6 @@ vboxnetflt_INCS.linux   := \
 vboxnetflt_INCS         := \
 	$(PATH_SUB_CURRENT)
 vboxnetflt_LDFLAGS.solaris += -N drv/vboxdrv
-  ifdef VBOXNETFLT_SOLARIS_USE_NETINFO
-vboxnetflt_DEFS.solaris += VBOXNETFLT_SOLARIS_USE_NETINFO
-vboxnetflt_LDFLAGS.solaris += -N misc/neti
-  endif
 vboxnetflt_LIBS = \
 	$(PATH_LIB)/SUPR0IdcClient$(VBOX_SUFF_LIB)
 ## @todo vboxflt should resolves all the IPRT bits from vboxdrv.
