--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33599 2010-10-29 11:14:14Z noreply@oracle.com $
+# $Id: Makefile.kmk 33631 2010-11-01 06:35:05Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -378,6 +378,7 @@ VirtualBox_QT_MOCSRCS = \
 	src/globals/UIExtraDataEventHandler.cpp \
 	src/extensions/QISplitter.cpp \
 	src/selector/UIVMDesktop.cpp \
+	src/settings/UISettingsDialogSpecific.cpp \
 	src/settings/vm/VBoxVMSettingsPortForwardingDlg.cpp \
 	src/runtime/UIActionsPool.cpp \
 	src/runtime/UIIndicatorsPool.cpp \
@@ -450,6 +451,7 @@ VirtualBox_SOURCES = \
 	src/extensions/QIWizard.cpp \
 	src/settings/UISettingsDialog.cpp \
 	src/settings/UISettingsDialogSpecific.cpp \
+	src/settings/UISettingsPage.cpp \
 	src/settings/VBoxSettingsSelector.cpp \
 	src/settings/global/VBoxGLSettingsGeneral.cpp \
 	src/settings/global/VBoxGLSettingsInput.cpp \
