--- a/src/VBox/Additions/WINNT/Graphics/Miniport/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Miniport/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33146 2010-10-15 10:34:58Z noreply@oracle.com $
+# $Id: Makefile.kmk 33676 2010-11-02 09:48:24Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for VBoxVideo.
 #
@@ -77,16 +77,16 @@ ifdef VBOX_WITH_WDDM
   VBoxVideoWddm_DEFS      += VBOXWDDM_WITH_VBVA
   VBoxVideoWddm_DEFS      += VBOXWDDM_RENDER_FROM_SHADOW
   ifdef VBOXVDMA_WITH_VBVA
-   VBoxVideoWddm_DEFS     += VBOXVDMA_WITH_VBVA 
+   VBoxVideoWddm_DEFS     += VBOXVDMA_WITH_VBVA
   endif
  endif
  ifdef VBOX_WITH_VDMA
-  VBoxVideoWddm_DEFS     += VBOX_WITH_VDMA 
+  VBoxVideoWddm_DEFS     += VBOX_WITH_VDMA
  endif
  ifdef VBOX_WITH_CRHGSMI
   VBoxVideoWddm_DEFS     += VBOX_WITH_CRHGSMI
  endif
- 
+
  ifdef DEBUG_misha
   VBoxVideoWddm_DEFS       += LOG_ENABLED
  endif
