--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33678 2010-11-02 10:30:46Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33679 2010-11-02 10:44:01Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -107,7 +107,10 @@ common/misc/buildconfig.cpp_DEFS = \
 	IPRT_BLDCFG_VERSION_STRING=\"$(VBOX_VERSION_STRING)\" \
 	IPRT_BLDCFG_VERSION_MAJOR=$(VBOX_VERSION_MAJOR) \
 	IPRT_BLDCFG_VERSION_MINOR=$(VBOX_VERSION_MINOR) \
-	IPRT_BLDCFG_VERSION_BUILD=$(VBOX_VERSION_BUILD)
+	IPRT_BLDCFG_VERSION_BUILD=$(VBOX_VERSION_BUILD) \
+	IPRT_BLDCFG_TARGET=\"$(KBUILD_TARGET)\" \
+	IPRT_BLDCFG_TARGET_ARCH=\"$(KBUILD_TARGET_ARCH)\" \
+	IPRT_BLDCFG_TYPE=\"$(KBUILD_TYPE)\"
 
 #
 # Unicode Specification reader used to regenerate unidata.cpp.
