--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33784 2010-11-04 16:50:03Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33806 2010-11-05 17:20:15Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -729,11 +729,13 @@ endif # !VBOX_ONLY_SDK (the ifndef is far above)
 #
 ifeq ($(LOGNAME),bird) # def VBOX_WITH_EXTPACK
  PROGRAMS += VBoxExtPackHelperApp
- VBoxExtPackHelperApp_TEMPLATE = VBoxR3Static
- VBoxExtPackHelperApp_SOURCES = VBoxExtPackHelperApp.cpp
- VBoxExtPackHelperApp_DEFS = IN_RT_R3
+ VBoxExtPackHelperApp_TEMPLATE = VBoxR3SetUidToRoot
+ VBoxExtPackHelperApp_SOURCES = \
+	VBoxExtPackHelperApp.cpp \
+	ExtPackUtil.cpp
  VBoxExtPackHelperApp_LIBS = \
-	$(VBOX_LIB_RUNTIME_STATIC)
+        $(LIB_RUNTIME)
+
 endif # VBOX_WITH_EXTPACK
 
 #
