--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32253 2010-09-06 15:14:24Z ramshankar.venkataraman@oracle.com $
+# $Id: Makefile.kmk 33935 2010-11-10 15:37:02Z noreply@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -37,6 +37,9 @@ ifdef VBOX_WITH_MULTI_CORE
 endif
 ifdef VBOX_WITH_R0_LOGGING
  VMM_COMMON_DEFS += VBOX_WITH_R0_LOGGING
+endif
+ifdef VBOX_WITH_VMMR0_DISABLE_LAPIC_NMI
+ VMM_COMMON_DEFS += VBOX_WITH_VMMR0_DISABLE_LAPIC_NMI
 endif
 # VMM_COMMON_DEFS += VBOX_WITH_NS_ACCOUNTING_STATS
 
