--- a/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32881 2010-10-04 09:01:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33966 2010-11-11 10:32:07Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for VBoxTray.
 #
@@ -35,7 +35,7 @@ VBoxTray_SOURCES  = \
 	VBoxDisplay.cpp \
 	VBoxVRDP.cpp \
 	VBoxRestore.cpp \
-	helpers.cpp \
+	VBoxHelpers.cpp \
 	VBoxTray.rc
 ifdef VBOX_WITH_GUEST_PROPS
  VBoxTray_DEFS     +=  _WIN32_IE=0x500 VBOX_WITH_GUEST_PROPS
